# fastapi-todo-app

./: pyproject.toml  requirements.txt
app/: main.py
app/static/: styles.css
app/templates/: index.html
